syntax = "proto3";

option csharp_namespace = "KabulCrypto.Crypto.GrpcService";

package wallet;

service Wallet {
	rpc GetWallets (GetWalletsRequest) returns (GetWalletsResponse);
}

message GetWalletsRequest { }

message GetWalletsResponse {
	repeated string wallets = 1;
}
